<resources>
    <string name="pay_now">Pay Now</string>
    <string name="connected_cards">Connected Cards</string>
    <string name="button_edit">Edit</string>
    <string name="button_done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="button_scan_card">Scan card</string>
    <string name="add_card">Add card</string>
    <string name="you_will_pay">You will pay</string>
    <string name="cards">Cards</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="ideal_payment">iDeal</string>
    <string name="empty" />
    <string name="secure_server_transmission">Your card details are encrypted using SSL before transmission to our secure payment service provider.</string>

    <string name="date_hint">MM/YY</string>
    <string name="cvv_hint">CVV</string>
    <string name="card_number_hint">Card number</string>
    <string name="card_holder_hint">Cardholder Name</string>
    <string name="country_hint">Country</string>
    <string name="post_code_hint">Postcode</string>
    <string name="check_card_number">Check card number</string>
    <string name="error_unknown_not_supported">Unknown Card Network is not supported</string>
    <string name="error_visa_not_supported">Visa is not supported</string>
    <string name="error_mastercard_not_supported">Mastercard is not supported</string>
    <string name="error_maestro_not_supported">Maestro is not supported</string>
    <string name="error_amex_not_supported">AmEx is not supported</string>
    <string name="error_discover_not_supported">Discover is not supported</string>
    <string name="error_union_pay_not_supported">China UnionPay is not supported</string>
    <string name="error_jcb_not_supported">JCB is not supported</string>
    <string name="error_diners_club_not_supported">Diners Club is not supported</string>
    <string name="check_expiry_date">Check expiry date</string>
    <string name="check_cvv">Check CVV</string>
    <string name="error_country_should_not_be_empty">Please select a country</string>
    <string name="card_subtitle">%1$s Ending</string>
    <string name="expired">Expired</string>
    <string name="is_expired">is Expired</string>
    <string name="will_expire_soon">will expire soon</string>
    <string name="expire_soon">expire soon</string>
    <string name="invalid_postcode">Invalid postcode entered</string>
    <string name="invalid_zip_code">Invalid ZIP code entered</string>

    <string name="transaction_error_title">Oops! Something went wrong.</string>
    <string name="transaction_unsuccessful">Transaction unsuccessful, please try again</string>
    <string name="close">Close</string>

    <string name="no_connected_cards">You didn\'t connect any cards yet</string>
    <string name="choose_payment_method">Choose a Payment Method</string>
    <string name="no_cards_added">You didn’t add any cards yet.\nAdd one right now or use any of the payment methods below</string>
    <string name="google_pay">Google Pay</string>
    <string name="delete">Delete</string>

    <string name="delete_card_alert_title">Delete Card ?</string>
    <string name="delete_card_alert_message">Are you sure you want to delete this card from your wallet?</string>
    <string name="default_visa_card_title">My VISA Card</string>
    <string name="default_mastercard_card_title">My MasterCard Card</string>
    <string name="default_maestro_card_title">My Maestro Card</string>
    <string name="default_amex_card_title">My American Express Card</string>
    <string name="default_jcb_card_title">My JCB Card</string>
    <string name="default_chinaunionpay_card_title">My China Union Pay Card</string>
    <string name="default_discover_card_title">My Discover Card</string>
    <string name="default_dinnersclub_card_title">My Dinners Club Card</string>
    <string name="mask">•••• •••• •••• %1$s</string>

    <string name="unable_to_process_request_error_desc">Sorry, we\'re currently unable to process this request.</string>
    <string name="unable_to_process_request_error_title">Unable to process</string>
    <string name="processing">Processing…</string>

    <string name="customize_card">Customize Card</string>
    <string name="save_as_default_payment_method">Save as default payment method</string>
    <string name="save">Save</string>

    <string name="error_card_title_too_long">Card Name cannot be longer than %1$d characters</string>

    <string name="rabobank">Rabobank</string>
    <string name="abn_amro">ABN AMRO</string>
    <string name="van_lanschot_bankiers">Van Lanschot Bankiers</string>
    <string name="triodos_bank">Triodos Bank</string>
    <string name="ing_bank">ING Bank</string>
    <string name="sns_bank">SNS Bank</string>
    <string name="asn">ASN</string>
    <string name="regiobank">RegioBank</string>
    <string name="knab">Knab</string>
    <string name="bunq">Bunq</string>
    <string name="moneyou">Moneyou</string>
    <string name="handelsbanken">Handelsbanken</string>

    <string name="there_is_a_delay">This is taking longer than expected. Please wait…</string>
    <string name="ideal_transaction">iDEAL transaction</string>
    <string name="dismiss">Dismiss</string>
    <string name="three_d_secure_check">3D Secure Check</string>

    <string name="scan_card_no_permission_title">Camera permissions not granted</string>
    <string name="scan_card_no_permission_message">Permissions must be granted in order to use the scan card functionality. Please go to Settings and toggle Camera on</string>
    <string name="scan_card_confirm">Got it</string>
    <string name="scan_card_go_to_settings">Go to Settings</string>
    <string name="wocr_hint_position_card_in_frame">Position card in this frame</string>
    <string name="wocr_automatically_scan">We will automatically scan it</string>

    <string name="pay_by_bank">Pay by Bank app</string>
    <string name="retry">Retry</string>
    <string name="transaction_successful">Transaction successful</string>
    <string name="pay_by_bank_transaction">Pay by Bank app transaction</string>

</resources>